--- a/s1w0n3.css
+++ b/s1w0n3.css
@@ -201,6 +201,7 @@ h6 {
     transform: translateY(-10px); scale: 1.08;
     box-shadow: 0 16px 32px rgba(0, 0, 0, 0.5);
     transition: 0.4s ease-in-out;
+    cursor: pointer;
 }
 
 .card-background {
